<resources>
    <string name="app_name">GeoCollect</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">Account</string>
    <string name="action_mission">Mission</string>
    <string name="title_pendingmission_list">Pending Missions</string>
    <string name="title_pendingmission_detail">Pending Mission Detail</string>
    <string name="general">General</string>
    <plurals name="reporting">
        <item quantity="one">One reporting</item>
        <item quantity="other">%d reportings.</item>
    </plurals>
    <string name="no_reporting_found">no reports found</string>
    <string name="map">Map</string>
    <string name="accept_mission">Accept</string>
    <string name="action_close">Close</string>
    <string name="action_logout">Logout</string>
    <string name="loading_footer">Loading&#8230;</string>
    <string name="sending_data">Sending data</string>
    <string name="sending_media">Sending media content</string>
    <string name="error_sending_data">Error Sending Data</string>
    <string name="no_media_to_send">No media to send</string>
    <string name="order">Order</string>
    <string name="order_by">Order By %1$s</string>
    <string name="order_by_ellipsis">Order By&#8230;</string>
    <string name="reload">Reload</string>
    <string name="update">Update</string>
    <string name="uil_descr_image">Image</string>
    <string name="swipe_left_to_continue">Swipe left to continue</string>
    <string name="gallery_context_menu_title">Image Options</string>
    <string name="gallery_context_menu_delete">Delete</string>
    <string name="button_confirm_image_delete">Do you really want to delete this image?</string>
    <string name="button_confirm_image_delete_title">Delete Image</string>
    <string name="undo_filter">Undo Filtering</string>
    <string name="data_send_success">Data successfully sent</string>
    <string name="mandatory">Mandatory</string>
    <string name="missing_data">Missing data</string>
    <string name="mandatory_fields_not_filled">The following fields were not filled:</string>
    <string name="mandatory_fields_please_fill">Please fill them before sending.</string>
    <string name="selection_filtered">Your selection was filtered</string>
    <string name="create_rectangle">Create a rectangle on the map to filter area of your interest</string>
    <string name="login_title">Enter your login data</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_check_to_save">Check to save password</string>
    <string name="login_not_online">Internet connection needed, please go online!</string>
    <string name="login_could_not_retrieve_cookies">Could not retrieve cookies to log you in, please check your login data</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="login_error_invalid_email">This email address is invalid</string>
    <string name="login_error_invalid_password">This password is too short</string>
    <string name="login_error_incorrect_password">This password is incorrect</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_error_generic">Error logging in</string>
    <string name="login_success">Success, you are logged in !</string>
    <string name="login_take_advantage">To take advantage of this feature, you must be registered</string>
    <string name="login_login">Login</string>
    <string name="login_register">If you are not registered yet, sign in on geocollect.geo-solutions.it</string>
    <string name="login_password_forgotten">Password forgotten ?</string>
    <string name="login_canceled">You did not login, cannot load data, must close</string>
    <string name="login_select_server">Select a server to connect to</string>
    <string name="logout_logged_in_as">You are logged in as :</string>
    <string name="logout_logged_out">You were successfully logged out !</string>
    <string name="logout_logout">Logout</string>
    <string name="logout_starting_option">Display the map on startup</string>
    <string name="my_inspections">My Inspections</string>
    <string name="my_inspections_my">My</string>
    <string name="create_a_inspection">Create an inspection</string>
    <string name="created_inspection_delete">Do you really want to delete this inspection ?</string>
    <string name="open_gps_settings">Open Settings</string>
    <string name="gps_not_enabled">Please enable GPS to acquire the position of the inspection</string>
    <string name="gps_still_not_enabled">You did not enable the GPS, cannot continue</string>
    <string name="search_missions">Search Missions</string>
    <string name="location_searching">Acquiring position&#8230;</string>
    <string name="menu_center">Center</string>
    <string name="menu_filter">Filter</string>
    <string name="entry_saved_success">%s successfully saved</string>
    <string name="menu_clear_survey">Clear data of this survey</string>
    <string name="menu_upload">Upload</string>
    <string name="upload_title">Data Upload</string>
    <plurals name="upload_intro">
        <item quantity="one">The following item will be uploaded</item>
        <item quantity="other">The following items will be uploaded</item>
    </plurals>
    <string name="survey">Survey</string>
    <plurals name="surveys">
        <item quantity="one">survey</item>
        <item quantity="other">surveys</item>
    </plurals>
    <string name="new_entry">New Notice</string>
    <plurals name="new_entries">
        <item quantity="one">new notice</item>
        <item quantity="other">new notices</item>
    </plurals>
    <string name="saving_data_title">Sava data</string>
    <string name="saving_data_message">Do you really want to mark this %s as complete ?</string>
    <string name="available_missions">Available Missions</string>
    <plurals name="dialog_message_with_amount">
        <item quantity="one">Do you want to download the background data for this mission ? %d file needs to be downloaded.</item>
        <item quantity="other">Do you want to download the background data for this mission ? %d files need to be downloaded.</item>
    </plurals>
    <string name="download_message_vector">Do you want to download the vector background data ?</string>
    <string name="download_successfull">Download successful</string>
    <string name="reset_search_filter">Reset Search Filter</string>
    <string name="button_confirm_logout">Do you really want to logout?</string>
    <string name="ordering_az">A-Z</string>
    <string name="ordering_distance">Distance</string>
    <string name="prefer_edited">Show Pending Uploads</string>
    <string name="version">Version</string>
    <string name="label_new">New</string>
    <string name="item_delete_title">Delete</string>
    <string name="item_delete_message">Do you really want to delete this item ?</string>
    <string name="title_activity_credits">Credits</string>
    <string name="credits_text">Made By GeoSolutions</string>
    <string name="no">No</string>
    <string name="not_now">Not now</string>
    <string name="wmc_site">Site</string>
    <string name="wmc_code">Code</string>
    <string name="wmc_sensor">Sensor</string>
    <string name="wmc_type">Type</string>
    <string name="wmc_curr_time">Current time</string>
    <string name="wmc_curr_date">Current date</string>
    <string name="wmc_delivery">Delivery</string>
    <string name="wmc_hf">HF [Vr]</string>
    <string name="wmc_k_const">K Const.</string>
    <string name="wmc_communication">Communication</string>
    <string name="wmc_overall">Overall counter [m3]</string>
    <string name="wmc_total">Total</string>
    <string name="wmc_ts_title">Time slots [h]</string>
    <string name="wmc_ts_1">Time Slot 1</string>
    <string name="wmc_ts_2">Time Slot 2</string>
    <string name="wmc_overall_preset">Overall Preset</string>
    <string name="wmc_provider">Provider</string>
    <string name="wmc_pin_code">Pin Code</string>
    <string name="wmc_sms_rec">SMS Recipient</string>
    <string name="wmc_sms_origin">SMS Origin</string>
    <string name="wmc_time_server">Time Server</string>
    <string name="wmc_counter">Counter</string>
    <string name="wmc_rssi">GSM RSSI</string>
    <string name="wmc_sms_test">SMS Test Receiver</string>
    <string name="wmc_device">Device</string>
    <string name="button_close">Close</string>
    <string name="button_clear">Clear</string>
    <string name="button_graph">Graph</string>
    <string name="button_preset">Preset</string>
    <string name="button_sms_test">SMS test</string>
    <string name="button_gms_on">GSM on</string>
    <string name="button_sync">Sync time</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="state_bt_not_available">Your device does not feature a Bluetooth adapter, cannot connect</string>
    <string name="state_bt_none_available">The system has no paired Bluetooth devices</string>
    <string name="state_bt_none_selected">Select a device to connect first</string>
    <string name="state_not_connected">Connect to a device first</string>
    <string name="state_device_selected">Device selected %s</string>
    <string name="state_connect_success">Successfully connected to %s</string>
    <string name="state_connect_failure">Error connecting to Bluetooth device %s</string>
    <string name="state_connection_active">Active connection to %s</string>
    <string name="state_disconnected">Disconnected from WMC device</string>
    <string name="state_sensor_type_changed">The change will be effective when writing the configuration to the device</string>
    <string name="state_write_success">Configuration written with success</string>
    <string name="state_write_failure">Error writing configuration</string>
    <string name="state_read_success">Configuration read with success</string>
    <string name="state_read_failure">Error reading configuration</string>
    <string name="state_no_config_available">No configuration available, connect to a device or load one first</string>
    <string name="state_sync_success">Counter synchronized with success</string>
    <string name="state_sync_failure">Error synchronizing clock</string>
    <string name="state_bt_failure">Error connecting to device</string>
    <string name="state_preset_failure">Input must be &gt; %1$.2f and &lt; %2$.2f</string>
    <string name="state_preset_success">Overall counter preset successfully applied</string>
    <string name="state_clear_success">Week counter cleared with success</string>
    <string name="state_site_code_invalid">Site Code must be between 0000 and 2999</string>
    <string name="state_gms_request_sent">GSM module activation, wait some time for network registration</string>
    <string name="state_test_sms_sent">SMS sent to recipient</string>
    <string name="state_test_sms_invalid">SMS test recipient is invalid</string>
    <string name="state_comm_error">Communication error</string>
    <string name="state_recipient_null">Recipient is void</string>
    <string name="state_provider_null">Provider is void</string>
    <string name="state_origin_null">Origin is void</string>
    <string name="state_time_server_invalid">Time server is incorrect</string>
    <string name="state_pin_code_invalid">Pin code is invalid</string>
    <string name="state_pin_code_not_numeric">Pin code must be numeric, have four numbers and within [0001,9999]</string>
    <string name="state_time_slot_start_null">%s beginning is void</string>
    <string name="state_time_slot_start_oob">%s beginning must be &lt;= 23</string>
    <string name="state_time_slot_end_null">%s ending is void</string>
    <string name="state_time_slot_end_oob">%s ending must be &lt;= 23</string>
    <string name="state_time_slot_start_edited">%1$s beginning changed to %2$d</string>
</resources>